:bug: Fix logo height on small screens

--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -19,17 +19,25 @@
     max-width: calc(var(--max-width) - var(--section-x-padding));
   }
 
+  &__logo {
+    @include center;
+  }
+
   &__logo a {
     --rotation: 0deg;
     @include transition;
     @include center;
+    width: var(--nav-logo-height);
     height: var(--nav-logo-height);
     color: var(--ui-accent-1);
     margin-left: -1rem;
-    padding: 1rem;
+    // padding: 1rem;
     transform: rotate(var(--rotation));
     z-index: 25;
-    width: 4rem;
+
+    svg {
+      padding: 1rem;
+    }
 
     &::before, &::after {
       display: none;
@@ -134,6 +142,10 @@
 
 @include md {
   .nav {
+    --nav-height: 5rem;
+    --nav-padding: 2rem;
+    padding-block: 0;
+
     .nav-expanded & {
       backdrop-filter: none;
     }
